<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.RegisterFragment">

    <EditText
        android:id="@+id/edit_register_username"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_padding"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_perm_identity_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:hint="@string/username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_register_password"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_padding"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edit_register_password_config"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_padding"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_priority_high_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:hint="@string/password_config"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_padding"
        android:text="@string/register"/>
</LinearLayout>